--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -57,5 +57,10 @@
     {% if active_tab == 'logs' %}
     <script src="/static/js/logs.js"></script>
     {% endif %}
+    
+    {% if active_tab == 'pipeline' %}
+    <script src="/static/js/vendor/wavesurfer.min.js"></script>
+    <script src="/static/js/pipeline.js"></script>
+    {% endif %}
 </body>
 </html>
