--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -60,7 +60,9 @@
     
     {% if active_tab == 'pipeline' %}
     <script src="/static/js/vendor/wavesurfer.min.js"></script>
+    <script src="/static/js/vendor/vis-network.min.js"></script>
     <script src="/static/js/pipeline.js"></script>
+    <script src="/static/js/derivation.js"></script>
     {% endif %}
 </body>
 </html>
